--- a/index.html
+++ b/index.html
@@ -1,81 +1,19 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danny Castiblanco-González</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+---
+layout: home
+title: Danny Castiblanco-González
+---
 
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        header img {
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .research-interests {
-            width: 50%;
-            margin: auto;
-        }
-
-        .research-interests h2 {
-            color: #333;
-            border-bottom: 2px solid #333;
-        }
-
-        .research-interests ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .research-interests ul li {
-            margin-bottom: 10px;
-        }
-    </style>
-</head>
-<body>
-
+<!-- Contenido específico de tu página principal va aquí -->
+<div class="container">
     <header>
-        <div>
+        <div class="left-side">
             <h1>Danny Castiblanco-González</h1>
-            <img src="images/profile-IMG.png" alt="Tu Foto de Perfil">
-        </div>
-        <div>
+            <img src="profile-IMG.png" alt="Tu Foto de Perfil">
             <a href="mailto:dccastiblanco@unbosque.edu.co">
                 <img src="mail-IMG.png" alt="Correo Electrónico">
             </a>
         </div>
-    </header>
-
-    <main>
-        <div class="research-interests">
+        <div class="right-side">
             <h2>Research Interests</h2>
             <p>
                 As a biologist, my research spans from the development and application of models to geospatial analyses in ecology, employing methodological approaches that integrate software such as GIS and R. My research interests lie in identifying spatial patterns in species distribution, developing biological corridors, and understanding host specificity of epiphytic plants in fragmented habitats. Through statistical and geospatial analyses, I aim to explore patterns and relationships in complex natural systems across diverse contexts.
@@ -89,11 +27,5 @@
                 <li>Multivariate statistics</li>
             </ul>
         </div>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Danny Castiblanco-González</p>
-    </footer>
-
-</body>
-</html>
+    </header>
+</div>
