--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombre Apellido - Sitio Web GIS</title>
+    <title>Danny Castiblanco-González - Sitio Web GIS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Aptos:wght@400;700&display=swap">
     <style>
         body {
@@ -26,7 +26,7 @@
         }
 
         nav {
-            background-color: #444444;
+            background-color: #156082;
             padding: 10px;
             text-align: center;
             flex: 0 0 20%;
@@ -54,7 +54,7 @@
         }
 
         footer {
-            background-color: #333333;
+            background-color: #156082;
             color: #ffffff;
             text-align: center;
             padding: 10px;
@@ -66,9 +66,9 @@
 </head>
 <body>
     <header>
-        <h1>Nombre Apellido</h1>
+        <h1>Danny Castiblanco-González</h1>
         <img src="ruta-a-tu-foto-de-perfil" alt="Tu Foto de Perfil">
-        <a href="mailto:tu-correo-electronico@example.com"><img src="ruta-a-tu-logo-de-correo" alt="Correo Electrónico"></a>
+        <a href="mailto:dccastiblanco@unbosque.edu.co"><img src="ruta-a-tu-logo-de-correo" alt="Correo Electrónico"></a>
     </header>
 
     <nav>
@@ -83,8 +83,6 @@
         </section>
     </main>
 
-    <footer>
-        <p>Contacto: tu-correo-electronico@example.com</p>
-    </footer>
+    
 </body>
 </html>
