--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -34,12 +34,12 @@
 
     <main>
         <section>
-            <h2>Historical migration of the neotropical songbird <em>Setophaga cerulea<em></h2>
+            <h2>Historical migration of the neotropical songbird <em>Setophaga cerulea</em></h2>
             <p>Neotropical migratory songbirds, such as those traveling between North and South America, face significant challenges due to climate change. Variations in climatic conditions impact resource availability, travel duration, and the synchronization of key life events, such as reproduction and migration. It is well known that migratory birds are sensitive to alterations in climatic conditions, and temperature plays a crucial role in shaping their migration patterns. 
-I utilized data collected from 1983 to 2021 to identify the migratory patterns of the cerulean warbler (<em>Setophaga cerulea<em>), classified as ‘near threatened’ according to the IUCN Red List of endangered species. This species, breeding in North America and wintering in South America, is affected by adverse climatic conditions and habitat loss.</p>
-            <p>I created an <a href="https://drive.google.com/drive/folders/1k_Atcu_Pmxv913dAovVHGoGyhFZc7Rtf?usp=sharing" target="_blank">infinite loop animation</a> using geospatial visualization techniques to depict the monthly distribution of <em>S. cerulea<em> in relation to historical maximum monthly temperature.</p>
+I utilized data collected from 1983 to 2021 to identify the migratory patterns of the cerulean warbler (<em>Setophaga cerulea</em>), classified as ‘near threatened’ according to the IUCN Red List of endangered species. This species, breeding in North America and wintering in South America, is affected by adverse climatic conditions and habitat loss.</p>
+            <p>I created an <a href="https://drive.google.com/drive/folders/1k_Atcu_Pmxv913dAovVHGoGyhFZc7Rtf?usp=sharing" target="_blank">infinite loop animation</a> using geospatial visualization techniques to depict the monthly distribution of <em>S. cerulea</em> in relation to historical maximum monthly temperature.</p>
             <img src="ruta-a-tu-imagen" alt="Descripción de la imagen" class="project-image">
-            <p>Long-term monitoring of <em>S. cerulea<em>, coupled with the analysis of climatic variables, provides valuable insights to guide the development of effective conservation strategies and management of critical habitats.</p>
+            <p>Long-term monitoring of <em>S. cerulea</em>, coupled with the analysis of climatic variables, provides valuable insights to guide the development of effective conservation strategies and management of critical habitats.</p>
         <section>
             <h2>Contributions</h2>
             <p>This project welcomes contributions! You can suggest improvements, provide additional data, or share your own analyses.</p>
